@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Nov 2013; Peter Wilmott <p@p8952.info> dm-aggregates-1.2.0.ebuild:
+  dm-aggregates: Use versionator + slots
+
 *dm-aggregates-1.2.0 (29 Oct 2013)
 
   29 Oct 2013; Peter Wilmott <p@p8952.info> +dm-aggregates-1.2.0.ebuild,
